--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <!-- Game Window -->
     <div class="game-screen">
+      <script src="StartScene.js"></script>
+      <script src="GameScene.js"></script>
       <script src="game.js"></script>
     </div>
 
